# tucker_riemopt

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: sphinx.yml
_sources/: index.rst
docs/: api.rst  conf.py  index.rst  main.rst  requirements.txt
examples/: backend.ipynb  eigenvalues.ipynb  tucker.ipynb
src/: __init__.py  matrix.py  optimize.py  riemanian.py  riemopt.py  test_matrix.py  tucker.py
src/backend/: __init__.py  backend.py  core.py  jax_backend.py  pytorch_backend.py
test/: __init__.py  backend.py  backend_test.py  matrix_test.py  riemanian.py  riemopt_test.py  test_matrix.py  test_riemopt.py  tucker.py  tucker_test.py
test/common/: riemopt_test.py  tucker_test.py
test/sf_tucker/: riemannian_test.py  sftucker_matrix_test.py  sftucker_riemannian_test.py  tucker_test.py
test/sparse/: sparse_tensor_test.py  sparse_tucker_test.py
test/symmetric/: riemopt_test.py  tucker_test.py
test/tucker/: matrix_test.py  riemannian_test.py  tucker_test.py
tucker_riemopt/: __init__.py  matrix.py  optimize.py  riemopt.py  sparse.py  tucker.py
tucker_riemopt/backend/: __init__.py  backend.py  jax_backend.py  pytorch_backend.py
tucker_riemopt/sf_tucker/: matrix.py  riemannian.py  sf_tucker.py
tucker_riemopt/symmetric/: riemopt.py  tucker.py
tucker_riemopt/tucker/: matrix.py  riemannian.py  tucker.py
