[tool.poetry]
name = "tucker-riemopt"
version = "1.0.1"
description = "Tucker toolbox for Riemannian optimization."
authors = ["johanddc <ivan.peshekhonov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.4"
scipy = "^1.8.0"
opt-einsum = "^3.3.0"
torch = {version = "^2.0.0", optional = true}
jax = {version = "^0.4.23", optional = true}

[tool.poetry.extras]
torch = ["torch"]
jax = ["jax"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"